--- a/dice.html
+++ b/dice.html
@@ -22,6 +22,7 @@
 
         <div class="menu ins">
             <p>Instructions</p>
+            <p>Instructions</p>
             <li> Each player can roll the dice as many times he want.</li>
             <li>At each roll score will be added to current score.</li>
             <li>Once the player presses switch button, the turn shifts to the other player and the score adds to total score.</li>
