--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="jquery.js"></script>
     <script src="frontend.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Charm|Righteous|Spicy+Rice" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <title>Roll the Dice</title>
 </head>
@@ -23,27 +24,25 @@
    <div class="main-section">
        <h1>Roll <span>the</span> Dice</h1>
        <p>Try your luck and Be the winner</p>
-   </div> 
-   <div class="Key-Board">
-       <h3>Keybard controls</h3>
-       <ul>
-           <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nam blanditiis tempora quasi omnis quod cumque deserunt rerum pariatur, odio culpa quibusdam, atque repellendus minus in magni quae vel fugiat? </li>
-       </ul>
-   </div>
-   <div class="instructions">
-       <h3>Instruction</h3>
-       <ul>
-           <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nam blanditiis tempora quasi omnis quod cumque deserunt rerum pariatur, odio culpa quibusdam, atque repellendus minus in magni quae vel fugiat? </li>
-       </ul>
-   </div>
+    </div> 
+           <div class="instructions">
+               <h3>Instruction</h3>
+               <ul>
+                   <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nam blanditiis tempora quasi omnis quod cumque deserunt rerum pariatur, odio culpa quibusdam, atque repellendus minus in magni quae vel fugiat? </li>
+                   <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nam blanditiis tempora quasi omnis quod cumque deserunt rerum pariatur, odio culpa quibusdam, atque repellendus minus in magni quae vel fugiat? </li>
+                   <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nam blanditiis tempora quasi omnis quod cumque deserunt rerum pariatur, odio culpa quibusdam, atque repellendus minus in magni quae vel fugiat? </li>
+                   <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nam blanditiis tempora quasi omnis quod cumque deserunt rerum pariatur, odio culpa quibusdam, atque repellendus minus in magni quae vel fugiat? </li>
+               </ul>
+           </div>
+   
    <div class="About-Me">
        <img src="img/back.png" width="50px" height="50px" alt="">
-       <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos laborum inventore sit voluptatum quisquam odit quis, itaque placeat explicabo praesentium sed sequi, eius neque reprehenderit quod necessitatibus quos enim nobis! </p>
-       <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos laborum inventore sit voluptatum quisquam odit quis, itaque placeat explicabo praesentium sed sequi, eius neque reprehenderit quod necessitatibus quos enim nobis! </p>
-       <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos laborum inventore sit voluptatum quisquam odit quis, itaque placeat explicabo praesentium sed sequi, eius neque reprehenderit quod necessitatibus quos enim nobis! </p>
-       <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos laborum inventore sit voluptatum quisquam odit quis, itaque placeat explicabo praesentium sed sequi, eius neque reprehenderit quod necessitatibus quos enim nobis! </p>
-       <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos laborum inventore sit voluptatum quisquam odit quis, itaque placeat explicabo praesentium sed sequi, eius neque reprehenderit quod necessitatibus quos enim nobis! </p>
-       <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos laborum inventore sit voluptatum quisquam odit quis, itaque placeat explicabo praesentium sed sequi, eius neque reprehenderit quod necessitatibus quos enim nobis! </p>
+      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia dolores rem ad odio minus aut corrupti. Ipsa, maiores aperiam provident mollitia laborum perspiciatis. Vitae fugiat expedita doloribus, delectus repellendus ipsum.</p>
+      <div class="social-media">
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-linkedin-square"></i>
+      </div>
    </div>
     
 </body>
