--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Charm|Righteous|Spicy+Rice" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-    <title>Roll the Dice</title>
+    <title>Roll the Dice Choose Your Luck</title>
 </head>
 <script>
     
