--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>Try your luck and Be the winner</p>
     </div> 
         <div class="instructions">
-            <h3>Instructions</h3>
+            <h3>Instructions For Player</h3>
                 </ul>
                     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nam blanditiis tempora quasi omnis quod cumque deserunt rerum pariatur, odio culpa quibusdam, atque repellendus minus in magni quae vel fugiat? </li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nam blanditiis tempora quasi omnis quod cumque deserunt rerum pariatur, odio culpa quibusdam, atque repellendus minus in magni quae vel fugiat? </li>
