--- a/dice.html
+++ b/dice.html
@@ -22,7 +22,7 @@
 
         <div class="menu ins">
             <p>Instructions</p>
-            <li> Each player can roll the dice as many times he want.</li>
+            <li> Each player can roll the dice as many times he want to.</li>
             <li>At each roll score will be added to current score.</li>
             <li>Once the player presses switch button, the turn shifts to the other player and the score adds to total score.</li>
             <li> One who reaches the EXACT target first, wins.<br> <br> But before the player switches if he rolls jokerface,the current score becomes 0 and turn automatically shifts to other player</li>
